; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__free.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pack_backend = type { %struct.pack_backend*, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.git_pack_file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @pack_backend__free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_backend__free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.pack_backend*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.git_pack_file*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %2, align 8
  %9 = bitcast i32* %8 to %struct.pack_backend*
  store %struct.pack_backend* %9, %struct.pack_backend** %3, align 8
  store i64 0, i64* %4, align 8
  br label %10

10:                                               ; preds = %24, %1
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.pack_backend*, %struct.pack_backend** %3, align 8
  %13 = getelementptr inbounds %struct.pack_backend, %struct.pack_backend* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %11, %15
  br i1 %16, label %17, label %27

17:                                               ; preds = %10
  %18 = load %struct.pack_backend*, %struct.pack_backend** %3, align 8
  %19 = getelementptr inbounds %struct.pack_backend, %struct.pack_backend* %18, i32 0, i32 1
  %20 = load i64, i64* %4, align 8
  %21 = call %struct.git_pack_file* @git_vector_get(%struct.TYPE_3__* %19, i64 %20)
  store %struct.git_pack_file* %21, %struct.git_pack_file** %5, align 8
  %22 = load %struct.git_pack_file*, %struct.git_pack_file** %5, align 8
  %23 = call i32 @git_mwindow_put_pack(%struct.git_pack_file* %22)
  br label %24

24:                                               ; preds = %17
  %25 = load i64, i64* %4, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %4, align 8
  br label %10

27:                                               ; preds = %10
  %28 = load %struct.pack_backend*, %struct.pack_backend** %3, align 8
  %29 = getelementptr inbounds %struct.pack_backend, %struct.pack_backend* %28, i32 0, i32 1
  %30 = call i32 @git_vector_free(%struct.TYPE_3__* %29)
  %31 = load %struct.pack_backend*, %struct.pack_backend** %3, align 8
  %32 = getelementptr inbounds %struct.pack_backend, %struct.pack_backend* %31, i32 0, i32 0
  %33 = load %struct.pack_backend*, %struct.pack_backend** %32, align 8
  %34 = call i32 @git__free(%struct.pack_backend* %33)
  %35 = load %struct.pack_backend*, %struct.pack_backend** %3, align 8
  %36 = call i32 @git__free(%struct.pack_backend* %35)
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local %struct.git_pack_file* @git_vector_get(%struct.TYPE_3__*, i64) #1

declare dso_local i32 @git_mwindow_put_pack(%struct.git_pack_file*) #1

declare dso_local i32 @git_vector_free(%struct.TYPE_3__*) #1

declare dso_local i32 @git__free(%struct.pack_backend*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
